--- a/invite.html
+++ b/invite.html
@@ -13,7 +13,7 @@
       align-items: center;
       flex-direction: column;
       font-family: Arial, sans-serif;
-      background: url("background.jfif") no-repeat center center fixed;
+      background: url("back.jpg") no-repeat center center fixed;
       background-size: cover;
       transition: background 0.5s ease-in-out;
     }
@@ -102,3 +102,4 @@
   </script>
 </body>
 </html>
+
